# crewforge

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
content_research/: README.md  pyproject.toml
content_research/src/content_research/: crew.py  main.py
content_research/src/content_research/config/: agents.yaml  tasks.yaml
content_research/src/content_research/tools/: custom_tool.py
docs/: BRIEF.md  ROADMAP.md  SPEC.md
docs/progress/: QUESTIONS.md
examples/: README.md  __init__.py  agent_generation_demo.py  debug_syntax.py  validation_demo.py
examples/generated_crews/: .gitkeep
examples/six_thinking_hats/six_thinking_hats/: README.md  pyproject.toml
examples/six_thinking_hats/six_thinking_hats/src/six_thinking_hats/: crew.py  main.py
examples/six_thinking_hats/six_thinking_hats/src/six_thinking_hats/config/: agents.yaml  tasks.yaml
examples/six_thinking_hats/six_thinking_hats/src/six_thinking_hats/tools/: custom_tool.py
learning_store/: metrics.json
src/crewforge/: __init__.py  __main__.py  clarifier.py  cli.py  configuration_updater.py  dependency_manager.py  documentation_generator.py  enhancement.py  executor.py  llm.py  orchestrator.py  progress.py  prompt_templates.py  scaffolder.py  tool_patterns.py  validation.py
src/crewforge/cli/: __init__.py  main.py
src/crewforge/core/: __init__.py  generator.py  llm.py  progress.py  scaffolding.py  templates.py  validator.py
src/crewforge/models/: __init__.py  agent.py  crew.py  task.py
src/crewforge/storage/: __init__.py  learning.py
src/crewforge/templates/: agents.py.j2  agents.yaml.j2  crew.py.j2  tasks.py.j2  tasks.yaml.j2  tools.py.j2
src/crewforge/templates/agents/: content_team.yaml.j2  data_team.yaml.j2  default.yaml.j2  marketing_team.yaml.j2
src/crewforge/templates/docs/: README.md.jinja
src/crewforge/templates/prompts/: analyze_prompt_system.j2  analyze_prompt_user.j2  crewai_system_prompt.j2  generate_agents_system.j2  generate_agents_user.j2  generate_crew_py_system.j2  generate_crew_py_user.j2  generate_tasks_system.j2  generate_tasks_user.j2  select_tools_system.j2  select_tools_user.j2  user_requirements_prompt.j2
src/crewforge/templates/tasks/: content_team.yaml.j2  data_team.yaml.j2  default.yaml.j2  marketing_team.yaml.j2
tests/: __init__.py  conftest.py  test_agent_generation.py  test_agent_models.py  test_clarifier_parser_integration.py  test_cli.py  test_cli_argument_validation.py  test_cli_error_handling.py  test_cli_error_integration.py  test_cli_integration.py  test_cli_progress.py  test_cli_scaffolder_integration.py  test_comprehensive_error_handling.py  test_configuration_integration.py  test_configuration_updater.py  test_crew_models.py  test_crewai_config_integration.py  test_crewai_config_validation.py  test_dependency_manager.py  test_detailed_error_reporting.py  test_documentation_generator.py  test_enhancement.py  test_enhancement_tool_integration.py  test_error_handling.py  test_executor.py  test_generator.py  test_integration.py  test_learning.py  test_llm.py  test_llm_advanced_error_handling.py  test_llm_client.py  test_llm_integration.py  test_logging.py  test_multi_turn_conversations.py  test_multi_turn_integration.py  test_orchestrator.py  test_package_structure.py  test_preference_integration.py  test_progress.py  test_progress_integration.py  (+17 more)
tests/fixtures/: sample_prompts.py
