[project]
name = "content_research"
version = "0.1.0"
description = "content-research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0"
]

[project.scripts]
content_research = "content_research.main:run"
run_crew = "content_research.main:run"
train = "content_research.main:train"
replay = "content_research.main:replay"
test = "content_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
