[project]
name = "six_thinking_hats"
version = "0.1.0"
description = "six_thinking_hats using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0"
]

[project.scripts]
six_thinking_hats = "six_thinking_hats.main:run"
run_crew = "six_thinking_hats.main:run"
train = "six_thinking_hats.main:train"
replay = "six_thinking_hats.main:replay"
test = "six_thinking_hats.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
